--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ aside {
   <article>
     <h2>ABOUT ME</h2>
     <p>Hello and welcome to my CV-Website!</p>
-    <div>I'm Selmanur, a Business Information Management student at Hochschule Hannover.</div>
+    <div>I'm Selmanur, a Business Information System student at Hochschule Hannover.</div>
     <div>My passion for STEM subjects began early, leading me to study Computer Science after my A-Levels.</div>
     <div>However, during my third semester studying computer science, I discovered Business Information Systems, which fascinated me so much that I switched to this field.</div>
     <div>Currently, I'm studying abroad at SETU in Carlow, Ireland, to improve my English and my expertise.</div>
